移さない領域追加した

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@ run
 logs
 export_data
 BackEnd/.env
+*.pid
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.log
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+BackEnd/__pycache__/
+BackEnd/app/__pycache__/
+BackEnd/app/models/__pycache__/
+BackEnd/app/crud/__pycache__/
+BackEnd/app/core/__pycache__/
+BackEnd/app/api/__pycache__/
+BackEnd/app/database/__pycache__/
+BackEnd/app/workers/__pycache__/
