.envファイルの位置を変えた

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,6 @@ MQTT_PORT=1883
 # エレベーター状態データの配信トピック
 MQTT_TOPIC=elevator/status 
 # データフォーマット文字列
-FORMAT_STR=<Hbbb 
+FORMAT_STR=<Hbbb
+
+VITE_BACKEND_HOST=localhost
