.envファイルの整理とufwから変更変えるために設定を変えた

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,6 @@ DB_HOST=localhost
 DB_PORT=3306
 # MySQL データベース名
 DB_NAME=your_database
-# DATABASE_URL=${DB_DRIVER}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # ============================================================
 # MQTT ブローカー設定
@@ -23,9 +22,16 @@ DB_NAME=your_database
 MQTT_HOST=broker.hivemq.com
 # MQTTブローカーのポート番号
 MQTT_PORT=1883
+
 # エレベーター状態データの配信トピック
 MQTT_TOPIC=elevator/status 
 # データフォーマット文字列
 FORMAT_STR=<Hbbb
 
-VITE_BACKEND_HOST=localhost
+# ============================================================
+# webポート設定
+# ============================================================
+
+HOST=0.0.0.0
+BACKEND_PORT=8000
+VITE_PORT=5173
