--- a/BackEnd/.gitignore
+++ b/BackEnd/.gitignore
@@ -1,8 +1,1 @@
-__pycache__
-.env
-app/__pycache__
-app/api/__pycache__
-app/core/__pycache__
-app/database/__pycache__
-app/services/__pycache__
-app/workers/__pycache__
+**/__pycache__/
