NGINXを導入した

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,13 @@ FORMAT_STR=<Hbbb
 # webポート設定
 # ============================================================
 
-HOST=0.0.0.0
+SSH_PORT=2222
 BACKEND_PORT=8000
 VITE_PORT=5173
+NGINX_PORT=80
+
+# ============================================================
+# IP設定
+# ============================================================
+HOST=0.0.0.0
+LOCAL_HOST=127.0.0.1
